[gd_scene load_steps=7 format=3 uid="uid://cgp5eivo4vtgt"]

[ext_resource type="Script" path="res://Structures/resource.gd" id="1_8pkao"]
[ext_resource type="Texture2D" uid="uid://c05gqfsyxbdv8" path="res://Assets/Resources/iron rock.png" id="2_bjcn1"]
[ext_resource type="Texture2D" uid="uid://mm66mxqop7cf" path="res://Assets/buttonLong_blue.png" id="3_13pvu"]
[ext_resource type="Texture2D" uid="uid://d3d57g5awares" path="res://Assets/barRed_horizontalMid.png" id="4_ojtdj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ji682"]
size = Vector2(42, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_482wa"]
radius = 41.1096

[node name="Resource" type="StaticBody2D"]
script = ExtResource("1_8pkao")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ji682")

[node name="Iron" type="Sprite2D" parent="."]
self_modulate = Color(0.923602, 0.684692, 0.622538, 1)
texture = ExtResource("2_bjcn1")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_482wa")

[node name="Timer" type="Timer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -21.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -30.0
step = 0.01
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("3_13pvu")
texture_progress = ExtResource("4_ojtdj")
tint_under = Color(1, 1, 1, 0.0784314)

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
